:heavy_check_mark: Сборка #6

--- a/6/index.html
+++ b/6/index.html
@@ -27,7 +27,7 @@
           <li class="map">
             <a href="#">Карта штата</a>
           </li>
-          <li class="hotels">
+          <li class="hotels-option">
             <a href="catalog.html">Гостиницы</a>
           </li>
         </ul>
@@ -40,7 +40,7 @@
         <p class="advantages">Рассмотрим 5 причин, по которым Седона лучше чем Гранд Каньон!</p>
         <ol class="features-list">
           <li>
-            <div class="really-city">
+            <div class="real-city">
               <h3 class="feature-item">Настоящий городок</h3>
               <p class="all-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
             </div>
