--- a/6/catalog.html
+++ b/6/catalog.html
@@ -15,21 +15,21 @@
     <header class="main-header">
       <nav class="main-nav container">
         <a class="main-header-logo" href="index.html">
-          <img src="img/logo.svg" width="138" height="55" alt="Логотип города Седона">
+          <img src="img/logo.svg" width="138" height="70" alt="Логотип города Седона">
         </a>
         <div class="main-nav-wrapper">
           <ul class="site-nav">
-            <li>
+            <li class="info">
               <a href="#">Информация</a>
             </li>
-            <li>
+            <li class="photo">
               <a href="#">Фото и Видео</a>
             </li>
-            <li>
+            <li class="map">
               <a href="#">Карта штата</a>
             </li>
-            <li class="site-nav-current">
-              <a>Гостиницы</a>
+            <li class="hotels-option">
+              <a href="catalog.html">Гостиницы</a>
             </li>
           </ul>
         </div>
@@ -43,19 +43,21 @@
       </section>
       <section>
         <h3 class="visually-hidden">Результаты поиска</h3>
-        <p class="result">Найдено:3</p>
-        <p class="sort">Сортировка</p>
-        <ul class="option">
-          <li class="sort-by-price sort-current">
-            <a href="#">По цене</a>
-          </li>
-          <li class="sort-by-type">
-            <a href="#">По типу</a>
-          </li>
-          <li class="sort-by-rating">
-            <a href="#">По рейтингу</a>
-          </li>
-        </ul>
+        <div class="version">
+          <p class="result">Найдено:3</p>
+          <ul class="option">
+            <p class="sort">Сортировка</p>
+            <li class="sort-by-price sort-current">
+              <a href="#">По цене</a>
+            </li>
+            <li class="sort-by-type">
+              <a href="#">По типу</a>
+            </li>
+            <li class="sort-by-rating">
+              <a href="#">По рейтингу</a>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="hotels">
         <h4 class="visually-hidden">Отели, отсортированные по цене</h4>
